build: undertow memory option6